--- a/thepittjungle/app/static/style.css
+++ b/thepittjungle/app/static/style.css
@@ -40,6 +40,134 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+  #wrapper {
+    overflow-x: hidden;
+ }
+
+#sidebar-wrapper {
+  min-height: 100vh;
+  margin-left: -15rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
+}
+
+#sidebar-wrapper .list-group {
+  width: 15rem;
+}
+
+#page-content-wrapper {
+  min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
+
+  #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    margin-left: -15rem;
+  }
+}
+@import url("https://fonts.googleapis.com/css?family=Acme");
+@import url("https://fonts.googleapis.com/css?family=Gayathri");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.some-page-wrapper {
+  margin: 50px;
+  background-color: rgb(64, 190, 204);
+}
+
+.team-wrapper {
+  font-size: 20px;
+  font-family: Gayathri;
+  text-align: center;
+  color: white;
+  margin: 40px;
+  height: 300px;
+  background-color: #0e8c9b;
+}
+
+.right-column {
+  margin-top: 0px;
+  text-align: right;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.left-column {
+  background-color: #d3e676;
+  height: 380px;
+}
+
+h2 {
+  font-family: Acme;
+  font-size: 40px;
+}
+
+p {
+  padding-left: 15px;
+  font-family: Gayathri;
+  font-size: 23px;
+}
+.a {
+  padding-left: 20px;
+  padding-top: 20px;
+}
+.b {
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.team {
+  text-align: center;
+}
+
+.teampic {
+  object-fit: contain;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  height: 200px;
+  width: 180px;
+  border-radius: 50%;
+}
+
+.x {
+  margin-top: 10px;
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
