--- a/thepittjungle/app/templates/attractions.html
+++ b/thepittjungle/app/templates/attractions.html
@@ -1,23 +1,51 @@
 {% extends "base.html" %}
 {% block title %}PittJungle{% endblock %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-<div class="flex bg-gray-200">
-{%if (attractions is defined) and attractions%}
-{% for attraction in attractions %}
-<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2">  
-    <h3>{{attraction.attraction_name}}</h3>
-    <ul>
-        
-        <li><img src="data:;base64,{{ base64.b64encode(attraction.image).decode('ascii') }}" width="100" height="100"/></li>
-        <li>Address: {{attraction.address}}</li>
-        <li>Phone: {{attraction.phone}}</li>
-        <li>About: {{attraction.about_me}}</li>
-        <li>Tags: {{attraction.tags}}</li>
-    </ul>
-</div>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gayathri">
 
-{% endfor %}
+{{ wtf.quick_form(form) }}
+
+<div class="flex bg-gray-200">
+
+{%if (attractions is defined) and attractions%}
+	{% if filterAct == 'Show All' %}
+		{% for attraction in attractions %}
+			<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2">  
+				<h3 style="font-family: Acme; font-size: 20px;">{{attraction.attraction_name}}</h3>
+				<ul style="font-family: Gayathri;">
+					
+					<li><img src="data:;base64,{{ base64.b64encode(attraction.image).decode('ascii') }}" width="100" height="100"/></li>
+					<li>Address: {{attraction.address}}</li>
+					<li>Phone: {{attraction.phone}}</li>
+					<li>About: {{attraction.about_me}}</li>
+					<li>Tags: {{attraction.tags}}</li>
+				</ul>
+			</div>
+			
+		{% endfor %}
+		
+	{% else %}
+
+	{% for attraction in attractions %}
+		{% if attraction.tags|string() == filterAct %}
+			<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2">  
+				<h3>{{attraction.attraction_name}}</h3>
+				<ul>
+					
+					<li><img src="data:;base64,{{ base64.b64encode(attraction.image).decode('ascii') }}" width="100" height="100"/></li>
+					<li>Address: {{attraction.address}}</li>
+					<li>Phone: {{attraction.phone}}</li>
+					<li>About: {{attraction.about_me}}</li>
+					<li>Tags: {{attraction.tags}}</li>
+				</ul>
+			</div>
+
+		{% endif %}
+	{%endfor%}
+	{%endif%}
 {%endif%}
 </div>
 {% endblock %}
