--- a/thepittjungle/app/templates/restaurants.html
+++ b/thepittjungle/app/templates/restaurants.html
@@ -1,23 +1,61 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %}PittJungle{% endblock %}
 
 {% block page_content %}
-<div class="flex bg-gray-200">
-{%if (restaurants is defined) and restaurants%}
-{% for restaurant in restaurants %}
-<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2">  
-    <h3>{{restaurant.restaurant_name}}</h3>
-    <ul>
-        
-        <li><img src="data:;base64,{{ base64.b64encode(restaurant.image).decode('ascii') }}" width="100" height="100"/></li>
-        <li>Address: {{restaurant.address}}</li>
-        <li>Phone: {{restaurant.phone}}</li>
-        <li>About: {{restaurant.about_me}}</li>
-        <li>Tags: {{restaurant.tags}}</li>
-    </ul>
-</div>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gayathri">
 
+<div style="overflow-x: scroll;">
+
+{{ wtf.quick_form(form) }}
+
+{#<select name="rest">
+{% for rest in restList %}
+    <option value="{{ rest }}">{{ rest }}</option>
 {% endfor %}
+ </select>#}
+ 
+<div class="flex bg-gray-200">
+ 
+{%if (restaurants is defined) and restaurants%}
+
+	{% if filterRest == 'Show All' %}
+		{% for restaurant in restaurants %}
+			<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2"
+			style="width: 200px;">  
+				<h3 style="font-family: Acme; font-size: 20px;">{{restaurant.restaurant_name}}</h3>
+				<ul style="font-family: Gayathri;">
+					<li><img src="data:;base64,{{ base64.b64encode(restaurant.image).decode('ascii') }}" width="100" height="100"/></li>
+					<li>Address: {{restaurant.address}}</li>
+					<li>Phone: {{restaurant.phone}}</li>
+					<li>About: {{restaurant.about_me}}</li>
+					<li>Tags: {{restaurant.tags}}</li>
+				</ul>
+			</div>
+
+		{% endfor %}
+		
+	{% else %}
+
+	{% for restaurant in restaurants %}
+		{% if restaurant.tags|string() == filterRest %}
+
+			<div class=".flex-1 text-2xl text-gray-700 text-left bg-gray-400 px-4 py-2 m-2">  
+				<h3>{{restaurant.restaurant_name}}</h3>
+				<ul>
+					<li><img src="data:;base64,{{ base64.b64encode(restaurant.image).decode('ascii') }}" width="100" height="100"/></li>
+					<li>Address: {{restaurant.address}}</li>
+					<li>Phone: {{restaurant.phone}}</li>
+					<li>About: {{restaurant.about_me}}</li>
+					<li>Tags: {{restaurant.tags}}</li>
+				</ul>
+			</div>
+
+		{% endif %}
+	{%endfor%}
+	{%endif%}
 {%endif%}
+</div>
 </div>
 {% endblock %}
