--- a/thepittjungle/app/static/styles.css
+++ b/thepittjungle/app/static/styles.css
@@ -21,6 +21,10 @@
 div.post-tabs {
     margin-top: 16px;
 }
+
+div.center {
+	position: center
+}
 ul.posts {
     list-style-type: none;
     padding: 0px;
